# rust-store-microservices

./: .gitignore  Cargo.toml  Procfile  README.md  RustConfig
order-service/: Cargo.toml
order-service/migrations/2020-11-30-204824_order/: up.sql
order-service/src/: db.rs  gateway.rs  main.rs  model.rs  routes.rs  schema.rs
postman/: postman-heroku-environment.json
store-service/: Cargo.toml
store-service/migrations/2020-12-02-131400_users/: up.sql
store-service/src/: db.rs  gateway.rs  main.rs  model.rs  routes.rs  schema.rs
warehouse-service/: Cargo.toml
warehouse-service/migrations/2020-11-25-135235_warehouse/: down.sql  up.sql
warehouse-service/src/: db.rs  gateway.rs  main.rs  model.rs  routes.rs  schema.rs
warranty-service/: Cargo.toml
warranty-service/migrations/2020-11-23-123055_create_warranty/: down.sql  up.sql
warranty-service/src/: db.rs  main.rs  model.rs  routes.rs  schema.rs
